--- a/css/common_styles.css
+++ b/css/common_styles.css
@@ -165,7 +165,15 @@ body {
   text-decoration: none;
   color: white;
 }
-dd a:hover, .residency:hover a, .ls:hover {
+.btn-journal {
+  cursor: pointer;
+  border: none; 
+  background: none; 
+  font-family: Georgia, 'Times New Roman', Times, serif; 
+  font-size: 16px; 
+  color: #27a6e6;
+}
+dd a:hover, .residency:hover a, .ls:hover, .btn-journal:hover {
   text-decoration: underline;
   color: white;
 }
