--- a/css/common_styles.css
+++ b/css/common_styles.css
@@ -8,7 +8,7 @@
     box-shadow: rgba(14, 30, 37, 0.5) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   }
   .column div.cell_info {
-    border: 1px solid #2ecc71;
+    border: 1px solid #802ecc;
     border-radius: 36px 6px;
     margin-left: 4px;
     margin-right: 4px;
@@ -52,12 +52,12 @@
   background-image: linear-gradient(180deg, orange 0%, red 99%);
 }
 ::-webkit-scrollbar-thumb {
-  background-image: linear-gradient(180deg, #2ecc71 0%, #1abc9c 99%);
+  background-image: linear-gradient(180deg, #802ecc 0%, #00daae 99%);
   border-radius: 100px;
 }
 
 body {
-  background: #2e4153;
+  background: #000000;
   color: white;
 }
 
@@ -67,14 +67,14 @@ body {
 }
 .cell {
   margin-top: 14px;
-  border: 1px solid #2ecc71;
+  border: 1px solid #802ecc;
   border-radius: 6px;
-  background-color: #34495e;
+  background-color: #11171d;
   padding: 12px 12px;
   overflow: hidden;
-  -webkit-box-shadow: 4px 2px 12px -2px #2ecc71;
-  -moz-box-shadow: 4px 2px 12px -2px #2ecc71;
-  box-shadow: 4px 2px 12px -2px #2ecc71;
+  -webkit-box-shadow: 4px 2px 12px -2px #802ecc;
+  -moz-box-shadow: 4px 2px 12px -2px #802ecc;
+  box-shadow: 4px 2px 12px -2px #802ecc;
 }
 
 .header {
@@ -85,9 +85,9 @@ body {
 .btn-style {
   padding: 6px 10px;
   font-size: 14px;
-  background-color: #3d5770;
+  background-color: #25384a;
   color: white;
-  border: 1px solid orange;
+  border: 1px solid #00daae;
   border-radius: 50px;
   overflow: hidden;
   width: auto;
@@ -97,9 +97,10 @@ body {
   transition: 1.5s;
 }
 .btn-style:hover {
-  background-color: #34495e;
-  border: 1px solid #2ecc71;
-  box-shadow: rgba(0, 0, 0, 0.5) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  border: 1px solid #802ecc;
+  -webkit-box-shadow: 4px 2px 12px -3px #802ecc;
+  -moz-box-shadow: 4px 2px 12px -3px #802ecc;
+  box-shadow: 4px 2px 12px -3px #802ecc;
   transition: 1.25s;
 }
 
@@ -113,7 +114,7 @@ body {
   max-width: 250px;
   left: 56%; top: 0;
   border-radius: 2px 50px 50px 50px;
-  background: #1a7a42;
+  background: #00daae60;
   color: #fff;
   font-size: 14px;
   padding: 8px;
@@ -135,14 +136,14 @@ body {
 .avatar_img {
   display: block;
   margin: auto;
-  border-radius: 70% 30% 30% 70% / 60% 40% 60% 40%;
-  border: 1px solid orange;
+  border-radius: 50%;
+  border: 1px solid #00daae;
   box-shadow: rgba(0, 0, 0, 0.75) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   text-indent: 30px;
   padding: 12px;
   margin: 20px auto;
   width: 72%;
-  background: linear-gradient(#34495e, #556b81);
+  background: linear-gradient(#1a232b, #25384a);
 }
 .challenge {
   display: flex;
@@ -171,7 +172,7 @@ body {
   background: none; 
   font-family: Georgia, 'Times New Roman', Times, serif; 
   font-size: 16px; 
-  color: #27a6e6;
+  color: #00daae;
 }
 dd a:hover, .residency:hover a, .ls:hover, .btn-journal:hover {
   text-decoration: underline;
@@ -185,130 +186,21 @@ dd a:hover, .residency:hover a, .ls:hover, .btn-journal:hover {
   padding: 12px;
   float: left;
   max-width: 25%;
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
   transition: 0.2s;
   border-radius: 100px;
 }
 .icon img:hover {
   -webkit-filter: grayscale(0%);
   filter: grayscale(0%);
-  box-shadow: 0 0 5px 0.5px orange;
+  box-shadow: 0 0 5px 0.5px #00daae;
   padding: 2px;
   background-color: white;
   transition: 1s;
 }
 
-.btn-navbar {
-  float: left;
-  display: block;
-  text-align: center;
-  color: white;
-  padding: 8px 16px;
-  text-decoration: none;
-  background-color: #00000000;
-  border: none;
-  cursor: pointer;
-}
-.btn-navbar:hover {
-  background-color: #ffa6001a;
-  border-radius: 10% 30% 50% 70%;
-  color: orange;
-}
-
-.right {
-  float: right;
-}
-
-.tab {
-  border-radius: 6px 6px 36px 36px;
-}
-.tab button {
-  color: white;
-  background-color: inherit;
-  float: left;
-  border: none;
-  cursor: pointer;
-  padding: 12px;
-  font-size: 14px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  text-shadow: 1px 1px 2px #222;
-  transition: 0.75s;
-}
-.tab button:hover {
-  background-color: #ffa6001a;
-  color: orange;
-  text-shadow: 1px 1px 3px #000;
-  transition: 0.75s;
-}
-
-/* Стиль содержимого вкладки */
-.tabcontent {
-  display: none;
-  padding: 36px 12px 0px 16px;
-  border-radius: 36px 6px;
-  margin-top: 24px;
-}
-
-/* Информационный блок */
 .flare, .my_contacts_soc a, dd a, .ls {
-  color: #27a6e6;
+  color: #00daae;
   text-decoration: none;
-}
-.ls {
-  color: #68b6e6;
-}
-.profile_info_block {
-  padding: 0 0 29px;
-  border-top: 1px solid orange;
-}
-.clear_fix {
-  display: block;
-}
-.profile_info_header_wrap {
-  border-bottom: none;
-  margin: -11px 0 10px;
-  position: relative;
-}
-.profile_info_header {
-  font-size: 16px;
-  background: linear-gradient(to right, #2e4153 1%, #2e4153 50%, orange 99%);
-  padding: 10px 12px;
-  border: 1px solid orange;
-  border-radius: 50px;
-  display: inline;
-  text-shadow: 1px 1px 2px #222;
-}
-.profile_info {
-  line-height: 150%;
-  color: var(--text_secondary);
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.profile_info_row {
-  font-size: 16px;
-  padding-top: 10px;
-  margin: 0;
-  font-weight: 40;
-  -webkit-font-smoothing: subpixel-antialiased;
-  -moz-osx-font-smoothing: auto;
-}
-dt, .subtitle {
-  color: #b3b3b3;
-}
-.tablinks {
-  width: 50%;
-}
-.show_next {
-  border: none;
-  background-color: rgba(0, 0, 0, 0);
-  color: orange;
-  font-size: 16px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  cursor: pointer;
-}
-.show_next:hover {
-  color: #2ecc71;
 }
 
 .footer {
