--- a/css/style_modal.css
+++ b/css/style_modal.css
@@ -50,7 +50,7 @@
 .modal_close {
   flex: 10%;
   cursor: pointer;
-  background-color: #11171d;
+  background-color: #040607;
   color: white;
   font-size: 24px;
   margin-top: -20px;
