--- a/css/common_styles.css
+++ b/css/common_styles.css
@@ -69,7 +69,7 @@ body {
   margin-top: 14px;
   border: 1px solid #802ecc;
   border-radius: 6px;
-  background-color: #11171d;
+  background-color: #040607;
   padding: 12px 12px;
   overflow: hidden;
   -webkit-box-shadow: 4px 2px 12px -2px #802ecc;
@@ -85,7 +85,7 @@ body {
 .btn-style {
   padding: 6px 10px;
   font-size: 14px;
-  background-color: #25384a;
+  background-color: #141e27;
   color: white;
   border: 1px solid #00daae;
   border-radius: 50px;
@@ -143,7 +143,7 @@ body {
   padding: 12px;
   margin: 20px auto;
   width: 72%;
-  background: linear-gradient(#1a232b, #25384a);
+  background: linear-gradient(#040607, #141e27);
 }
 .challenge {
   display: flex;
